fixed the werid text alignment

--- a/style_format.css
+++ b/style_format.css
@@ -9,7 +9,7 @@
 }
 
 *{
-    text-align: left; /* This will center all text on the webpage */
+    text-align: justify; /* This will center all text on the webpage */
 }
 
 b {
